Added the start of buttons

--- a/index.html
+++ b/index.html
@@ -29,11 +29,58 @@
     <form onsubmit="setTimeout(calculate(), 150)" action="#">
       <input type="text" placeholder="equation" id="expression" onkeyup="UpdateInput.Update()" data-problemnumber="1">
     </form>
-    <div id="functions">
-
-    </div>
-    <div id="lines">
-
+    <div id="buttons">
+      <div class="button" data-value="0">
+        0
+      </div>
+      <div class="button" data-value="1">
+        1
+      </div>
+      <div class="button" data-value="2">
+        2
+      </div>
+      <div class="button" data-value="3">
+        3
+      </div>
+      <div class="button" data-value="4">
+        4
+      </div>
+      <div class="button" data-value="5">
+        5
+      </div>
+      <div class="button" data-value="6">
+        6
+      </div>
+      <div class="button" data-value="7">
+        7
+      </div>
+      <div class="button" data-value="8">
+        8
+      </div>
+      <div class="button" data-value="9">
+        9
+      </div>
+      <div class="button" data-value="+">
+        +
+      </div>
+      <div class="button" data-value="-">
+        -
+      </div>
+      <div class="button" data-value="*">
+        *
+      </div>
+      <div class="button" data-value="/">
+        /
+      </div>
+      <div class="button" data-value="sin(,)">
+        sin
+      </div>
+      <div class="button" data-value="sqrt(,)">
+        sqrt
+      </div>
+      <div class="button" data-value="submit">
+        =
+      </div>
     </div>
 
     <script>
@@ -44,6 +91,7 @@
     <script src="info.js"></script>
     <script src="fraction.js"></script>
     <script src="beautifulDecimals.js"></script>
+    <script src="initializeButtons.js"></script>
     <script src="calculator.js"></script>
   </body>
 </html>
