--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
     </script>
     <script src="beautifyinput.js"></script>
   </head>
-  <body>
+  <body onresize="resizeCanvas()">
     <div class="graphCanvases">
-      <canvas id="graphing" width="400" height="400"></canvas>
-      <canvas id="info" width="400" height="400"></canvas>
+      <canvas id="graphing"></canvas>
+      <canvas id="info"></canvas>
+    </div>
+    <div class="tables">
+
     </div>
     <div id="calculationHistory">
       <div id="buffer" class="output" style="visibility: hidden; position: absolute;"></div>
@@ -32,110 +35,136 @@
     <form onsubmit="setTimeout(calculate(), 150)" action="#">
       <input type="text" value="&#8248;" placeholder="equation" id="expression" onkeyup="UpdateInput.Update()" disabled>
     </form>
-    <div id="buttons">
-      <div class="button" data-value="0">
-        0
+    <div id="buttons" >
+      <div class="buttonDivider">
+        <div class="button" data-value="7">
+          7
+        </div>
+        <div class="button" data-value="8">
+          8
+        </div>
+        <div class="button" data-value="9">
+          9
+        </div>
+        <div class="button" data-value="4">
+          4
+        </div>
+        <div class="button" data-value="5">
+          5
+        </div>
+        <div class="button" data-value="6">
+          6
+        </div>
+        <div class="button" data-value="1">
+          1
+        </div>
+        <div class="button" data-value="2">
+          2
+        </div>
+        <div class="button" data-value="3">
+          3
+        </div>
+        <div class="button" data-value="0">
+          0
+        </div>
+        <div class="button" data-value=".">
+          .
+        </div>
       </div>
-      <div class="button" data-value="1">
-        1
+      <div class="buttonDivider">
+        <div class="button" data-value="operation+">
+          +
+        </div>
+        <div class="button" data-value="operation-">
+          -
+        </div>
+        <div class="button" data-value="operation*">
+          *
+        </div>
+        <div class="button" data-value="operation/">
+          /
+        </div>
+        <div class="button" data-value="sqrt(&#8248;)">
+          sqrt
+        </div>
+        <div class="button" data-value="operation^">
+          ^
+        </div>
       </div>
-      <div class="button" data-value="2">
-        2
+      <div class="buttonDivider">
+        <div class="button" data-value="asin(&#8248;)">
+          arcsin
+        </div>
+        <div class="button" data-value="acos(&#8248;)">
+          arccos
+        </div>
+        <div class="button" data-value="atan(&#8248;)">
+          atan
+        </div>
+        <div class="button" data-value="sin(&#8248;)">
+          sin
+        </div>
+        <div class="button" data-value="cos(&#8248;)">
+          cos
+        </div>
+        <div class="button" data-value="tan(&#8248;)">
+          tan
+        </div>
+        <div class="button" data-value="csc(&#8248;)">
+          csc
+        </div>
+        <div class="button" data-value="sec(&#8248;)">
+          sec
+        </div>
+        <div class="button" data-value="cot(&#8248;)">
+          cot
+        </div>
+        <div class="button" data-value="acsc(&#8248;)">
+          arcsin
+        </div>
+        <div class="button" data-value="acos(&#8248;)">
+          arccos
+        </div>
+        <div class="button" data-value="atan(#)">
+          atan
+        </div>
       </div>
-      <div class="button" data-value="3">
-        3
+      <div class="buttonDivider">
+        <div class="button" data-value="special(p i,pi)">
+          &pi;
+        </div>
+        <div class="button" data-value="special((,(&#8248;))">
+          (
+        </div>
+        <div class="button" data-value=")">
+          )
+        </div>
+        <div class="button" data-value="special(left,move-left)">
+          left
+        </div>
+        <div class="button" data-value="special(right,move-right)">
+          right
+        </div>
+        <div class="button" data-value="special(backspace,backspace)">
+          bkspc
+        </div>
+        <div class="button" data-value="special(f(x),f(&#8248;))">
+          f()
+        </div>
+        <div class="button" data-value="special(g(x),g(&#8248;))">
+          g()
+        </div>
+        <div class="button" data-value="special(h(x),h(&#8248;))">
+          h()
+        </div>
+        <div class="button" data-value=":=">
+          :=
+        </div>
+        <div class="button" data-value="x">
+          x
+        </div>
       </div>
-      <div class="button" data-value="4">
-        4
-      </div>
-      <div class="button" data-value="5">
-        5
-      </div>
-      <div class="button" data-value="6">
-        6
-      </div>
-      <div class="button" data-value="7">
-        7
-      </div>
-      <div class="button" data-value="8">
-        8
-      </div>
-      <div class="button" data-value="9">
-        9
-      </div>
-      <div class="button" data-value="operation+">
-        +
-      </div>
-      <div class="button" data-value="operation-">
-        -
-      </div>
-      <div class="button" data-value="operation*">
-        *
-      </div>
-      <div class="button" data-value="operation/">
-        /
-      </div>
-      <div class="button" data-value="sqrt(&#8248;)">
-        sqrt
-      </div>
-      <div class="button" data-value="operation^">
-        ^
-      </div>
-      <div class="button" data-value="asin(&#8248;)">
-        arcsin
-      </div>
-      <div class="button" data-value="acos(&#8248;)">
-        arccos
-      </div>
-      <div class="button" data-value="atan(&#8248;)">
-        atan
-      </div>
-      <div class="button" data-value="sin(&#8248;)">
-        sin
-      </div>
-      <div class="button" data-value="cos(&#8248;)">
-        cos
-      </div>
-      <div class="button" data-value="tan(&#8248;)">
-        tan
-      </div>
-      <div class="button" data-value="csc(&#8248;)">
-        csc
-      </div>
-      <div class="button" data-value="sec(&#8248;)">
-        sec
-      </div>
-      <div class="button" data-value="cot(&#8248;)">
-        cot
-      </div>
-      <div class="button" data-value="acsc(&#8248;)">
-        arcsin
-      </div>
-      <div class="button" data-value="acos(&#8248;)">
-        arccos
-      </div>
-      <div class="button" data-value="atan(#)">
-        atan
-      </div>
-      <div class="button" data-value="pi&#8248;">
-        &pi;
-      </div>
-      <div class="button" data-value="(&#8248;)">
-        (
-      </div>
-      <div class="button" data-value=")">
-        )
-      </div>
-      <div class="button" data-value="move-left">
-        left
-      </div>
-      <div class="button" data-value="move-right">
-        right
-      </div>
-      <div class="button" data-value="backspace">
-        bkspc
-      </div>
-      <div class="button" data-value="submit">
+      <div class="button" data-value="special(enter,submit)">
         =
       </div>
     </div>
@@ -152,5 +181,7 @@
     <script src="beautifulDecimals.js"></script>
     <script src="initializeButtons.js"></script>
     <script src="calculator.js"></script>
+    <script src="canvasResizer.js">
+    </script>
   </body>
 </html>
