Fixed ^ operation to include ()

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="button" data-value="sqrt(&#8248;)">
           sqrt
         </div>
-        <div class="button" data-value="operation^">
+        <div class="button" data-value="operation^(&#8248;)">
           ^
         </div>
       </div>
