added clear button

--- a/index.html
+++ b/index.html
@@ -167,6 +167,9 @@
       <div class="button" data-value="special(enter,submit)">
         =
       </div>
+      <div class="button" data-value="special(clear, clear)">
+        clear
+      </div>
     </div>
 
     <script>
