Added support for up and down buttons

--- a/index.html
+++ b/index.html
@@ -81,14 +81,14 @@
         <div class="button" data-value="operation*">
           *
         </div>
-        <div class="button" data-value="operation/">
+        <div class="button" data-value="operation/(&#8248;)">
           /
         </div>
         <div class="button" data-value="sqrt(&#8248;)">
-          sqrt
+          `sqrt(x)`
         </div>
         <div class="button" data-value="operation^(&#8248;)">
-          ^
+          `x^y`
         </div>
       </div>
       <div class="buttonDivider">
@@ -144,6 +144,12 @@
         </div>
         <div class="button" data-value="special(right,move-right)">
           right
+        </div>
+        <div class="button" data-value="special(up,move-up)">
+          up
+        </div>
+        <div class="button" data-value="special(down,move-down)">
+          down
         </div>
         <div class="button" data-value="special(backspace,backspace)">
           bkspc
