Made backspace delete := together.

--- a/index.html
+++ b/index.html
@@ -154,20 +154,20 @@
         <div class="button" data-value="special(backspace,backspace)">
           bkspc
         </div>
-        <div class="button" data-value="special(f(x),f(&#8248;))">
-          f()
-        </div>
-        <div class="button" data-value="special(g(x),g(&#8248;))">
-          g()
-        </div>
-        <div class="button" data-value="special(h(x),h(&#8248;))">
-          h()
-        </div>
-        <div class="button" data-value=":=">
-          :=
-        </div>
         <div class="button" data-value="x">
           x
+        </div>
+        <div class="button" data-value="special(f,f(&#8248;))">
+          f()
+        </div>
+        <div class="button" data-value="special(g,g(&#8248;))">
+          g()
+        </div>
+        <div class="button" data-value="special(h,h(&#8248;))">
+          h()
+        </div>
+        <div class="button" data-value="special(=, :=)">
+          :=
         </div>
       </div>
       <div class="button" data-value="special(enter,submit)">
