--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     <script src="beautifyinput.js"></script>
   </head>
   <body onresize="resizeCanvas()">
-    <div class="graphCanvases">
+    <!-- <div class="graphCanvases">
       <canvas id="graphing"></canvas>
       <canvas id="info"></canvas>
-    </div>
-    <div class="tables">
-
+    </div> -->
+    <div class="tablesCanvases">
+      <canvas id="tables"></canvas>
     </div>
     <div id="calculationHistory">
       <div id="buffer" class="output" style="visibility: hidden; position: absolute;"></div>
@@ -186,6 +186,7 @@
     <script src="math.min.js"></script>
     <script src="graphing.js"></script>
     <script src="info.js"></script>
+    <script src="table.js"></script>
     <script src="fraction.js"></script>
     <script src="beautifulDecimals.js"></script>
     <script src="initializeButtons.js"></script>
