added movement and delta functionality to the table

--- a/index.html
+++ b/index.html
@@ -174,11 +174,16 @@
           :=
         </div>
       </div>
-      <div class="button" data-value="special(enter,submit)">
-        =
-      </div>
-      <div class="button" data-value="special(clear, clear)">
-        clear
+      <div class="buttonDivider">
+        <div class="button" data-value="special(enter,submit)">
+          =
+        </div>
+        <div class="button" data-value="special(clear, clear)">
+          clear
+        </div>
+        <div id="graphToggleButton" onclick="toggleGraph(this)">
+          Switch To Table
+        </div>
       </div>
     </div>
 
