--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="beautifyinput.js"></script>
   </head>
   <body onresize="resizeCanvas()">
-    <div class="container">
+    <div id="container" class="container">
       <div id="card">
         <div class="graphCanvases">
           <canvas id="graphing"></canvas>
@@ -25,6 +25,22 @@
         </div>
         <div class="tablesCanvases">
           <canvas id="tables"></canvas>
+          <div id="tableInterface" class="tableInterface">
+            <div class="tableButton" id="tableUpButton" onmousedown="tabler.moveUp()" onmouseup="tabler.stopMove()">
+              <img src="images/uparrow.png" alt="up"/>
+            </div>
+            <div class="tableButton" id="tableDownButton" onmousedown="tabler.moveDown()" onmouseup="tabler.stopMove()">
+              <img src="images/downarrow.png" alt="down" />
+            </div>
+            <div class="tableInputGroup">
+              <label for="tableDelta" class="tableLabel">delta</label><br />
+              <input type="text" id="tableDelta" value="" onfocus="listener.stop_listening()" onkeyup="tabler.setDelta(this)" onblur="listener.listen()">
+            </div>
+            <div class="tableInputGroup">
+              <label for="tableDelta" class="tableLabel">start</label><br />
+              <input type="text" id="tableStart" value="" onfocus="listener.stop_listening()" onkeyup="tabler.setStart(this.value)" onblur="listener.listen()">
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -42,144 +58,139 @@
     <div id="buttons" >
       <div class="buttonDivider">
         <div class="button" data-value="7">
-          7
+          <img src="images/7.png" alt="7" />
         </div>
         <div class="button" data-value="8">
-          8
+          <img src="images/8.png" alt="8" />
         </div>
         <div class="button" data-value="9">
-          9
+          <img src="images/9.png" alt="9" />
         </div>
         <div class="button" data-value="4">
-          4
+          <img src="images/4.png" alt="4" />
         </div>
         <div class="button" data-value="5">
-          5
+          <img src="images/5.png" alt="5" />
         </div>
         <div class="button" data-value="6">
-          6
+          <img src="images/6.png" alt="6" />
         </div>
         <div class="button" data-value="1">
-          1
+          <img src="images/1.png" alt="1" />
         </div>
         <div class="button" data-value="2">
-          2
+          <img src="images/2.png" alt="2" />
         </div>
         <div class="button" data-value="3">
-          3
+          <img src="images/3.png" alt="3" />
         </div>
         <div class="button" data-value="0">
-          0
+          <img src="images/0.png" alt="0" />
         </div>
         <div class="button" data-value=".">
-          .
+          <img src="images/decimal.png" alt="." />
         </div>
       </div>
       <div class="buttonDivider">
         <div class="button" data-value="operation+">
-          +
+          <img src="images/plus.png" alt="plus" />
         </div>
         <div class="button" data-value="operation-">
-          -
+          <img src="images/minus.png" alt="minus" />
         </div>
         <div class="button" data-value="operation*">
-          *
+          <img src="images/multiply.png" alt="multiply" />
         </div>
         <div class="button" data-value="operation/(&#8248;)">
-          /
+          <img src="images/divide.png" alt="divide"/>
         </div>
         <div class="button" data-value="sqrt(&#8248;)">
-          `sqrt(x)`
+          <img src="images/squareroot.png" alt="square root" />
         </div>
         <div class="button" data-value="operation^(&#8248;)">
-          `x^y`
+          <img src="images/exponent.png" alt="to the power of" />
         </div>
       </div>
       <div class="buttonDivider">
         <div class="button" data-value="asin(&#8248;)">
-          arcsin
+          <img src="images/asin.png" alt="asin" />
         </div>
         <div class="button" data-value="acos(&#8248;)">
-          arccos
+          <img src="images/acos.png" alt="acos" />
         </div>
         <div class="button" data-value="atan(&#8248;)">
-          atan
+          <img src="images/atan.png" alt="atan" />
         </div>
         <div class="button" data-value="sin(&#8248;)">
-          sin
+          <img src="images/sin.png" alt="sin" />
         </div>
         <div class="button" data-value="cos(&#8248;)">
-          cos
+          <img src="images/cos.png" alt="cos" />
         </div>
         <div class="button" data-value="tan(&#8248;)">
-          tan
+          <img src="images/tan.png" alt="tan" />
         </div>
         <div class="button" data-value="csc(&#8248;)">
-          csc
+          <img src="images/csc.png" alt="csc" />
         </div>
         <div class="button" data-value="sec(&#8248;)">
-          sec
+          <img src="images/sec.png" alt="sec" />
         </div>
         <div class="button" data-value="cot(&#8248;)">
-          cot
+          <img src="images/cot.png" alt="cot" />
         </div>
         <div class="button" data-value="acsc(&#8248;)">
-          arcsin
+          <img src="images/acsc.png" alt="acsc" />
         </div>
-        <div class="button" data-value="acos(&#8248;)">
-          arccos
+        <div class="button" data-value="asec(&#8248;)">
+          <img src="images/asec.png" alt="asec" />
         </div>
-        <div class="button" data-value="atan(#)">
-          atan
+        <div class="button" data-value="acot(#)">
+          <img src="images/acot.png" alt="acot" />
         </div>
       </div>
       <div class="buttonDivider">
         <div class="button" data-value="special(p i,pi)">
-          &pi;
+          <img src="images/pi.png" />
         </div>
         <div class="button" data-value="special((,(&#8248;))">
-          (
+          <img src="images/leftparen.png" alt="(" />
         </div>
         <div class="button" data-value=")">
-          )
-        </div>
-        <div class="button" data-value="special(left,move-left)">
-          left
-        </div>
-        <div class="button" data-value="special(right,move-right)">
-          right
-        </div>
-        <div class="button" data-value="special(up,move-up)">
-          up
-        </div>
-        <div class="button" data-value="special(down,move-down)">
-          down
+          <img src="images/rightparen.png" alt=")" />
         </div>
         <div class="button" data-value="special(backspace,backspace)">
-          bkspc
+          <img src="images/backspace.png" />
         </div>
         <div class="button" data-value="x">
-          x
+          <img src="images/x.png" />
         </div>
         <div class="button" data-value="special(f,f(&#8248;))">
-          f()
+          <img src="images/fofx.png" alt="f(x)" />
         </div>
         <div class="button" data-value="special(g,g(&#8248;))">
-          g()
+          <img src="images/gofx.png" alt="g(x)" />
         </div>
         <div class="button" data-value="special(h,h(&#8248;))">
-          h()
+          <img src="images/hofx.png" alt="h(x)" />
         </div>
         <div class="button" data-value="special(=, :=)">
-          :=
+          <img src="images/definedas.png" alt="defined as" />
         </div>
       </div>
       <div class="buttonDivider">
         <div class="button" data-value="special(enter,submit)">
-          =
+          <img src="images/equals.png" />
         </div>
         <div class="button" data-value="special(clear, clear)">
-          clear
+          <img src="images/clear.png" alt="clear" />
+        </div>
+        <div class="separate">
+          <img src="images/dpad.png" alt="dpad" />
+          <div class="buttonLeft"> </div>
+          <div class="buttonUp"> </div>
+          <div class="buttonDown"> </div>
+          <div class="buttonRight"> </div>
         </div>
         <div id="graphToggleButton" onclick="toggleGraph(this)">
           Switch To Table
