Fixing arrow buttons

--- a/index.html
+++ b/index.html
@@ -187,10 +187,10 @@
         </div>
         <div class="separate">
           <img src="images/dpad.png" alt="dpad" />
-          <div class="buttonLeft"> </div>
-          <div class="buttonUp"> </div>
-          <div class="buttonDown"> </div>
-          <div class="buttonRight"> </div>
+          <div class="buttonLeft" data-value="special(left, move-left)"> </div>
+          <div class="buttonUp" data-value="special(up, move-up)"> </div>
+          <div class="buttonDown" data-value="special(down, move-down)"> </div>
+          <div class="buttonRight" data-value="special(right, move-right)"> </div>
         </div>
         <div id="graphToggleButton" onclick="toggleGraph(this)">
           Switch To Table
