--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
             <div class="tableInputGroup">
               <label for="tableDelta" class="tableLabel">delta</label><br />
-              <input type="text" id="tableDelta" value="" onfocus="listener.stop_listening()" onkeyup="tabler.setDelta(this)" onblur="listener.listen()">
+              <input type="text" id="tableDelta" value="" onfocus="listener.stop_listening()" onkeyup="tabler.setDelta(this.value)" onblur="listener.listen()">
             </div>
             <div class="tableInputGroup">
               <label for="tableDelta" class="tableLabel">start</label><br />
