Fixed another table bug

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         <div class="tablesCanvases">
           <canvas id="tables"></canvas>
           <div id="tableInterface" class="tableInterface">
-            <div class="tableButton" id="tableUpButton" onmousedown="tabler.moveUp()" onmouseup="tabler.stopMove()">
+            <div class="tableButton" id="tableUpButton" onmousedown="tabler.moveUp()" onmouseup="tabler.stopMove()" onmouseout="tabler.stopMove()">
               <img src="images/uparrow.png" alt="up"/>
             </div>
-            <div class="tableButton" id="tableDownButton" onmousedown="tabler.moveDown()" onmouseup="tabler.stopMove()">
+            <div class="tableButton" id="tableDownButton" onmousedown="tabler.moveDown()" onmouseup="tabler.stopMove()" onmouseout="tabler.stopMove()">
               <img src="images/downarrow.png" alt="down" />
             </div>
             <div class="tableInputGroup">
